package/bmap-writer: bump to version 1.0.2
Switch from libxml2 to tinyxml2

Add http(s)/ftp stream wrapper script

Signed-off-by: Ayoub Zaki <ayoub.zaki@embetrix.com>

--- a/package/bmap-writer/Config.in
+++ b/package/bmap-writer/Config.in
@@ -3,7 +3,7 @@ config BR2_PACKAGE_BMAP_WRITER
 	depends on BR2_INSTALL_LIBSTDCPP
 	depends on BR2_USE_WCHAR # libarchive
 	select BR2_PACKAGE_LIBARCHIVE
-	select BR2_PACKAGE_LIBXML2
+	select BR2_PACKAGE_TINYXML2
 	help
 	  bmap-writer is a command-line utility designed to
 	  efficiently write disk images to storage devices using block
